@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015-2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2015-2019 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -59,6 +59,7 @@ import org.nuxeo.runtime.api.Framework;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
+import org.nuxeo.runtime.test.runner.TransactionalFeature;
 import org.nuxeo.runtime.transaction.TransactionHelper;
 import org.nuxeo.transientstore.test.TransientStoreFeature;
 
@@ -77,6 +78,9 @@ import com.sun.jersey.multipart.file.StreamDataBodyPart;
 @Deploy("org.nuxeo.ecm.platform.restapi.test:multiblob-doctype.xml")
 @Deploy("org.nuxeo.ecm.platform.restapi.test:test-conflict-batch-handler.xml")
 public class BatchUploadFixture extends BaseTest {
+
+    @Inject
+    protected TransactionalFeature txFeature;
 
     @Inject
     CoreSession session;
@@ -107,7 +111,7 @@ public class BatchUploadFixture extends BaseTest {
         String batchId = initializeDeprecatedNewBatch();
 
         // Upload a file not in multipart
-        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", "UTF-8");
+        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", UTF_8);
         String mimeType = "text/plain";
         String data1 = "Contenu accentué du premier fichier";
         String fileSize1 = String.valueOf(getUTF8Bytes(data1).length);
@@ -210,6 +214,8 @@ public class BatchUploadFixture extends BaseTest {
             }
         }
 
+        txFeature.nextTransaction(); // TODO check with efge
+
         DocumentModel doc = session.getDocument(new PathRef("/testBatchUploadDoc"));
         Blob blob = (Blob) doc.getPropertyValue("mb:blobs/0/content");
         assertNotNull(blob);
@@ -285,6 +291,8 @@ public class BatchUploadFixture extends BaseTest {
             assertEquals(Status.CREATED.getStatusCode(), response.getStatus());
         }
 
+        txFeature.nextTransaction(); // TODO check with efge
+
         // verify the created document
         DocumentModel doc = session.getDocument(new PathRef("/testBatchUploadDoc"));
         Blob blob = (Blob) doc.getPropertyValue("mb:blobs/0/content");
@@ -331,7 +339,7 @@ public class BatchUploadFixture extends BaseTest {
         }
 
         // Upload file
-        String fileName = URLEncoder.encode("Fichier accentué.txt", "UTF-8");
+        String fileName = URLEncoder.encode("Fichier accentué.txt", UTF_8);
         String mimeType = "text/plain";
         String data = "Contenu accentué";
         String fileSize = String.valueOf(getUTF8Bytes(data).length);
@@ -437,7 +445,7 @@ public class BatchUploadFixture extends BaseTest {
         String batchId = initializeDeprecatedNewBatch();
 
         // Upload chunks in desorder
-        String fileName = URLEncoder.encode("Fichier accentué.txt", "UTF-8");
+        String fileName = URLEncoder.encode("Fichier accentué.txt", UTF_8);
         String mimeType = "text/plain";
         String fileContent = "Contenu accentué composé de 3 chunks";
         String fileSize = String.valueOf(getUTF8Bytes(fileContent).length);
@@ -615,7 +623,7 @@ public class BatchUploadFixture extends BaseTest {
         }
 
         // Upload chunks in desorder
-        String fileName = URLEncoder.encode("Fichier accentué.txt", "UTF-8");
+        String fileName = URLEncoder.encode("Fichier accentué.txt", UTF_8);
         String mimeType = "text/plain";
         String fileContent = "Contenu accentué composé de 2 chunks";
         String fileSize = String.valueOf(getUTF8Bytes(fileContent).length);
@@ -715,7 +723,7 @@ public class BatchUploadFixture extends BaseTest {
         }
 
         // Upload file
-        String fileName = URLEncoder.encode("file.pdf", "UTF-8");
+        String fileName = URLEncoder.encode("file.pdf", UTF_8);
         String badMimeType = "pdf";
         String data = "Empty and wrong pdf data";
         String fileSize = String.valueOf(getUTF8Bytes(data).length);
@@ -876,8 +884,8 @@ public class BatchUploadFixture extends BaseTest {
         String fileName, data, fileSize = null, mimeType = "text/plain";
         Map<String, String> headers = new HashMap<>();
         for (int i = 0; i < numfiles; i++) {
-            fileName = URLEncoder.encode("Test File " + Integer.toString(i + 1) + ".txt", "UTF-8");
-            data = "Test Content " + Integer.toString(i + 1);
+            fileName = URLEncoder.encode("Test File " + (i + 1) + ".txt", UTF_8);
+            data = "Test Content " + (i + 1);
             if (fileSize == null) {
                 fileSize = String.valueOf(getUTF8Bytes(data).length);
                 headers.put("Content-Type", "text/plain");
@@ -886,8 +894,8 @@ public class BatchUploadFixture extends BaseTest {
                 headers.put("X-File-Type", mimeType);
             }
             headers.put("X-File-Name", fileName);
-            try (CloseableClientResponse response = getResponse(RequestType.POST,
-                    "upload/" + batchId + "/" + Integer.toString(i), data, headers)) {
+            try (CloseableClientResponse response = getResponse(RequestType.POST, "upload/" + batchId + "/" + i, data,
+                    headers)) {
                 assertEquals(Status.CREATED.getStatusCode(), response.getStatus());
             }
         }
@@ -899,7 +907,7 @@ public class BatchUploadFixture extends BaseTest {
             assertEquals(numfiles, nodes.size());
             for (int i = 0; i < numfiles; i++) {
                 JsonNode node = nodes.get(i);
-                assertEquals("Test File " + Integer.toString(i + 1) + ".txt", node.get("name").asText());
+                assertEquals("Test File " + (i + 1) + ".txt", node.get("name").asText());
                 assertEquals(fileSize, node.get("size").asText());
                 assertEquals("normal", node.get("uploadType").asText());
             }
@@ -955,7 +963,7 @@ public class BatchUploadFixture extends BaseTest {
         String batchId = initializeDeprecatedNewBatch();
 
         // Upload an empty file not in multipart
-        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", "UTF-8");
+        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", UTF_8);
         Map<String, String> headers = new HashMap<>();
         headers.put("X-File-Name", fileName1);
         headers.put("X-File-Size", "0");
@@ -1047,7 +1055,7 @@ public class BatchUploadFixture extends BaseTest {
         String batchId = initializeNewBatch();
 
         // Upload a file not in multipart
-        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", "UTF-8");
+        String fileName1 = URLEncoder.encode("Fichier accentué 1.txt", UTF_8);
         String mimeType = "text/plain";
         String data1 = "Contenu accentué du premier fichier";
         String fileSize1 = String.valueOf(getUTF8Bytes(data1).length);
@@ -1069,7 +1077,7 @@ public class BatchUploadFixture extends BaseTest {
         }
 
         // Upload a file not in multipart
-        String fileName2 = URLEncoder.encode("Fichier accentué 2.txt", "UTF-8");
+        String fileName2 = URLEncoder.encode("Fichier accentué 2.txt", UTF_8);
         headers = new HashMap<>();
         headers.put("Content-Type", "text/plain");
         headers.put("X-Upload-Type", "normal");
@@ -1119,7 +1127,7 @@ public class BatchUploadFixture extends BaseTest {
         String batchId = initializeDeprecatedNewBatch();
 
         // Upload a file not in multipart
-        String fileName1 = URLEncoder.encode("File.txt", "UTF-8");
+        String fileName1 = URLEncoder.encode("File.txt", UTF_8);
         String mimeType = "text/plain";
         String data1 = "Content";
         String fileSize1 = String.valueOf(getUTF8Bytes(data1).length);
@@ -1154,6 +1162,8 @@ public class BatchUploadFixture extends BaseTest {
             assertEquals(Status.CREATED.getStatusCode(), response.getStatus());
         }
 
+        txFeature.nextTransaction(); // TODO check with efge
+
         DocumentModel doc = session.getDocument(new PathRef("/testBatchUploadDoc"));
         Blob blob1 = (Blob) doc.getPropertyValue("files:files/0/file");
         assertNotNull(blob1);
@@ -1175,7 +1185,7 @@ public class BatchUploadFixture extends BaseTest {
             String batchId = initializeDeprecatedNewBatch();
 
             // Upload a file not in multipart
-            String fileName1 = URLEncoder.encode("File.txt", "UTF-8");
+            String fileName1 = URLEncoder.encode("File.txt", UTF_8);
             String mimeType = "text/plain";
             Map<String, String> headers = new HashMap<>();
             headers.put("Content-Type", "text/plain");
@@ -1212,6 +1222,8 @@ public class BatchUploadFixture extends BaseTest {
             try (CloseableClientResponse response = getResponse(RequestType.POST, "path/", json)) {
                 assertEquals(Status.CREATED.getStatusCode(), response.getStatus());
             }
+
+            txFeature.nextTransaction(); // TODO check with efge
 
             DocumentModel doc = session.getDocument(new PathRef("/testBatchUploadDoc"));
             Blob blob = (Blob) doc.getPropertyValue("file:content");
