@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2014 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2014-2019 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,9 +22,11 @@ package org.nuxeo.ecm.directory.ldap;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.nuxeo.ecm.directory.ldap.ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import javax.inject.Inject;
@@ -38,10 +40,10 @@ import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.nuxeo.ecm.core.api.DocumentModel;
+import org.nuxeo.ecm.core.api.local.WithUser;
 import org.nuxeo.ecm.directory.Directory;
 import org.nuxeo.ecm.directory.Session;
 import org.nuxeo.ecm.directory.api.DirectoryService;
-import org.nuxeo.ecm.platform.login.test.ClientLoginFeature;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
@@ -61,9 +63,6 @@ public class TestExternalLDAPSessionSecurity {
     public static final String SUPER_USER = "superUser";
 
     @Inject
-    ClientLoginFeature dummyLogin;
-
-    @Inject
     DirectoryService dirService;
 
     Session userDirSession;
@@ -72,7 +71,6 @@ public class TestExternalLDAPSessionSecurity {
 
     @Inject
     ExternalLDAPDirectoryFeature ldapFeature;
-
 
     @Before
     public void setUp() {
@@ -103,40 +101,36 @@ public class TestExternalLDAPSessionSecurity {
     }
 
     @Test
-    public void readerUserCanGetEntry() throws Exception {
-        dummyLogin.login(READER_USER);
+    @WithUser(READER_USER)
+    public void readerUserCanGetEntry() {
         DocumentModel entry = userDirSession.getEntry("Administrator");
         assertNotNull(entry);
         assertEquals("Administrator", entry.getId());
-        dummyLogin.logout();
     }
 
     @Test
-    public void readerUserCantDeleteEntry() throws Exception {
-        dummyLogin.login(READER_USER);
+    @WithUser(READER_USER)
+    public void readerUserCantDeleteEntry() {
         DocumentModel entry = userDirSession.getEntry("user1");
         assertNotNull(entry);
         userDirSession.deleteEntry("user1");
         entry = userDirSession.getEntry("user1");
         assertNotNull(entry);
-        dummyLogin.logout();
     }
 
     @Test
-    public void superUserCanDeleteEntry() throws Exception {
-        dummyLogin.login(SUPER_USER);
+    @WithUser(SUPER_USER)
+    public void superUserCanDeleteEntry() {
         DocumentModel entry = userDirSession.getEntry("user1");
         assertNotNull(entry);
         userDirSession.deleteEntry("user1");
         entry = userDirSession.getEntry("user1");
         Assert.assertNull(entry);
-        dummyLogin.logout();
     }
 
     @Test
-    public void superUserCanCreateEntry() throws Exception {
-        dummyLogin.login(SUPER_USER);
-
+    @WithUser(SUPER_USER)
+    public void superUserCanCreateEntry() {
         Map<String, Object> map = new HashMap<>();
         map.put("username", "user0");
         map.put("password", "pass0");
@@ -150,51 +144,40 @@ public class TestExternalLDAPSessionSecurity {
 
         dm = userDirSession.getEntry("user0");
         assertNotNull(dm);
-
-        dummyLogin.logout();
-
     }
 
     @Test
-    public void unauthorizedUserCantGetEntry() throws Exception {
-        dummyLogin.login("unauthorizedUser");
+    @WithUser("unauthorizedUser")
+    public void unauthorizedUserCantGetEntry() {
         DocumentModel entry = userDirSession.getEntry("Administrator");
         Assert.assertNull(entry);
-        dummyLogin.logout();
     }
 
     @Test
-    public void everyoneGroupCanGetEntry() throws Exception {
-        dummyLogin.login("anEveryoneUser");
+    @WithUser("anEveryoneUser")
+    public void everyoneGroupCanGetEntry() {
         DocumentModel entry = groupDirSession.getEntry("members");
         assertNotNull(entry);
         assertEquals("members", entry.getId());
-        dummyLogin.logout();
     }
 
     @Test
-    public void everyoneCanUpdateEntry() throws Exception {
-        dummyLogin.login("anEveryoneUser");
-
+    @WithUser("anEveryoneUser")
+    public void everyoneCanUpdateEntry() {
         DocumentModel entry = groupDirSession.getEntry("members");
         assertNotNull(entry);
 
-        assertEquals("cn=members,ou=editable,ou=groups,dc=example,dc=com",
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "dn"));
+        assertEquals("cn=members,ou=editable,ou=groups,dc=example,dc=com", entry.getProperty(GROUP_SCHEMANAME, "dn"));
 
-        assertEquals(Arrays.asList("submembers"),
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "subGroups"));
+        assertEquals(List.of("submembers"), entry.getProperty(GROUP_SCHEMANAME, "subGroups"));
 
         // edit description and members but not subGroups
-        entry.setProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "description", "AWonderfulGroup");
-        entry.setProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "members", Arrays.asList("user1", "user2"));
+        entry.setProperty(GROUP_SCHEMANAME, "description", "AWonderfulGroup");
+        entry.setProperty(GROUP_SCHEMANAME, "members", Arrays.asList("user1", "user2"));
         groupDirSession.updateEntry(entry);
 
         entry = groupDirSession.getEntry("members");
-        Assert.assertEquals("AWonderfulGroup",
-                entry.getProperty(ExternalLDAPDirectoryFeature.GROUP_SCHEMANAME, "description"));
-
-        dummyLogin.logout();
+        assertEquals("AWonderfulGroup", entry.getProperty(GROUP_SCHEMANAME, "description"));
     }
 
 }
